# SkoomaTuner

./: CMakeLists.txt  JUCE_PORT_GUIDE.md  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: low_high_cut.cc  low_high_cut.h  pitch_tracker.cpp  pitch_tracker.h  tuner.cc
